--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -6,5 +6,5 @@
   <% @genres.each do |genre| %>
     <input type="checkbox" name="genre_ids[]" value="<%= genre.id %>" id="<%= genre.name %>"><%= genre.name %></input>
   <% end %>
-  <input type="submit" name="Create"></input>
+  <input type="submit" value="Create"></input>
 </form>
