--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,4 +1,14 @@
+<%# binding.pry %>
+<% if flash.has?(:message) %>
+  <p><%= flash[:message] %></p>
+<% end %>
+
 <h1><%= @song.name %></h1>
-<h2>by <%= @song.artist %></h2>
+<h2>by <%= @song.artist.name %></h2>
 <br>
-<h2>Genre: <%= @song.genre %></h2>
+<h2>Genres:</h2>
+<ul>
+  <% @song.genres.each do |genre| %>
+    <li><%= genre.name %></li>
+  <% end %>
+</ul>
