--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -2,10 +2,17 @@
 
 <form action="/songs/<%= @song.slug %>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
+  <label for="Name">Song:</label>
   <input type="text" name="Name" value="<%= @song.name %>" id="Name"></input>
+  <label for="Artist Name">Artist:</label>
   <input type="text" name="Artist Name" value="<%= @song.artist.name %>" id="Artist Name"></input>
+  <label>Genres:</label>
+  <br>
   <% @genres.each do |genre| %>
     <input type="checkbox" name="genre_ids[]" value="<%= genre.id %>" id="<%= genre.name %>"><%= 'checked' if @song.genres.include?(genre) %><%= genre.name %></input>
   <% end %>
+  <br>
+  <br>
   <input type="submit" value="Save"></input>
+  <%# binding.pry %>
 </form>
