--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,10 +1,12 @@
 <h1>Create a New Song</h1>
 
 <form action="/songs" method="POST">
-  <input type="text" name="Name" placeholder="Name" id="Name"></input>
+  <input type="text" name="Name" placeholder="Song Name" id="Name"></input>
   <input type="text" name="Artist Name" placeholder="Artist Name" id="Artist Name"></input>
   <% @genres.each do |genre| %>
     <input type="checkbox" name="genre_ids[]" value="<%= genre.id %>" id="<%= genre.name %>"><%= genre.name %></input>
   <% end %>
+  <br>
+  <br>
   <input type="submit" value="Create"></input>
 </form>
