--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,14 +1,14 @@
-<%# binding.pry %>
 <% if flash.has?(:message) %>
   <p><%= flash[:message] %></p>
 <% end %>
 
 <h1><%= @song.name %></h1>
-<h2>by <%= @song.artist.name %></h2>
+<% binding.pry %>
+<h2>by <a href="<%= "/artists/#{@song.artist.name.slug}" %>"><%= @song.artist.name %></a></h2>
 <br>
 <h2>Genres:</h2>
 <ul>
   <% @song.genres.each do |genre| %>
-    <li><%= genre.name %></li>
+    <li><a href="<%= "/genres/#{genre.slug}" %>"><%= genre.name %></a></li>
   <% end %>
 </ul>
