--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -3,13 +3,13 @@
 <h2>Songs:</h2>
 <% @songs.each do |song| %>
   <ul>
-    <li><a href="<%= "/songs/#{song.slug}" %>"></a></li>
+    <li><a href="<%= "/songs/#{song.slug}" %>"><%= song.name %></a></li>
   </ul>
 <% end %>
 
 <h2>Artists:</h2>
 <% @artists.each do |artist| %>
   <ul>
-    <li><a href="<%= "/artists/#{artist.slug}" %>"></a></li>
+    <li><a href="<%= "/artists/#{artist.slug}" %>"><%= artist.name %></a></li>
   </ul>
 <% end %>
