--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -3,13 +3,13 @@
 <h2>Songs:</h2>
 <% @songs.each do |song| %>
   <ul>
-    <li><a href="<%= "/songs/#{song.slug}" %>">song.name</a></li>
+    <li><a href="<%= "/songs/#{song.slug}" %>"><%= song.name %></a></li>
   </ul>
 <% end %>
 
 <h2>Genres:</h2>
 <% @genres.each do |genre| %>
   <ul>
-    <li><a href="<%= "/genres/#{genre.slug}" %>">genre.name</a></li>
+    <li><a href="<%= "/genres/#{genre.slug}" %>"><% genre.name %></a></li>
   </ul>
 <% end %>
