--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -3,8 +3,8 @@
 <% end %>
 
 <h1><%= @song.name %></h1>
-<% binding.pry %>
-<h2>by <a href="<%= "/artists/#{@song.artist.name.slug}" %>"><%= @song.artist.name %></a></h2>
+<%# binding.pry %>
+<h2>by <a href="<%= "/artists/#{@song.artist.slug}" %>"><%= @song.artist.name %></a></h2>
 <br>
 <h2>Genres:</h2>
 <ul>
